@@ -46,10 +46,19 @@ class statsOutput {
 /** Outputs WikiText */
 class wikiStatsOutput extends statsOutput {
 	function heading() {
+		global $wgDummyLanguageCodes, $wgContLang;
 		$version = SpecialVersion::getVersion( 'nodb' );
 		echo "'''Statistics are based on:''' <code>" . $version . "</code>\n\n";
 		echo "'''Note:''' These statistics can be generated by running <code>php maintenance/language/transstat.php</code>.\n\n";
 		echo "For additional information on specific languages (the message names, the actual problems, etc.), run <code>php maintenance/language/checkLanguage.php --lang=foo</code>.\n\n";
+		echo 'English (en) is excluded because it is the default localization';
+		if( is_array( $wgDummyLanguageCodes ) ) {
+			foreach( $wgDummyLanguageCodes as $dummyCode ) {
+				$dummyCodes[] = $wgContLang->getLanguageName( $dummyCode ) . ' (' . $dummyCode . ')';
+			}
+			echo ', as well as the following languages that are not intended for system message translations, usually because they redirect to other language codes: ' . implode( ', ', $dummyCodes );
+		}
+		echo ".\n\n"; # dot to end sentence
 		echo '{| class="sortable wikitable" border="2" cellpadding="4" cellspacing="0" style="background-color: #F9F9F9; border: 1px #AAAAAA solid; border-collapse: collapse; clear:both;" width="100%"' . "\n";
 	}
 	function footer() {
